# kg-capture

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/kg-capture-app/: Cargo.toml
crates/kg-capture-app/src/: connection.rs  main.rs  settings.rs  system_fonts.rs
crates/kg-capture-fixture/: Cargo.toml
crates/kg-capture-fixture/src/: main.rs
crates/kg-capture-hook/: Cargo.toml
crates/kg-capture-hook/src/: lib.rs
crates/kg-capture-injector/: Cargo.toml
crates/kg-capture-injector/src/: main.rs
crates/kg-capture-protocol/: Cargo.toml
crates/kg-capture-protocol/src/: lib.rs
crates/kg-capture-xtask/: Cargo.toml
crates/kg-capture-xtask/src/: main.rs
src/: main.rs
