[package]
name = "kg-capture"
version = "0.0.5"
edition = "2024"

[dependencies]

[dependencies.windows]
version = "0.61.1"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_Graphics",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Storage_Xps",
    "Win32_System_LibraryLoader",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging",
    "UI",
]
