[workspace]
members = [
    "crates/kg-capture-app",
    "crates/kg-capture-fixture",
    "crates/kg-capture-hook",
    "crates/kg-capture-injector",
    "crates/kg-capture-protocol",
    "crates/kg-capture-xtask",
]
default-members = [
    "crates/kg-capture-app",
    "crates/kg-capture-protocol",
    "crates/kg-capture-xtask",
]
resolver = "3"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/dsh0416/kg-capture"

[workspace.dependencies]
getrandom = "0.4"
iced = { version = "=0.14.0", features = ["image"] }
ipc-channel = "=0.22.0"
retour = { version = "=0.4.0-alpha.4", default-features = false }
rfd = { version = "=0.17.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml_edit = "0.25.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
windows = "0.62.2"

[profile.release]
lto = "fat"
codegen-units = 1
