[package]
name = "kg-capture-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ipc-channel.workspace = true
kg-capture-protocol = { path = "../kg-capture-protocol" }
retour.workspace = true
tracing.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
]
