[package]
name = "kg-capture-injector"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kg-capture-protocol = { path = "../kg-capture-protocol" }
thiserror.workspace = true

[dependencies.windows]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_LibraryLoader",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
]
